# rpg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.org
.github/workflows/: ci.yml
lib/: CMakeLists.txt  GameLoop.hpp  lib.h
lib/ecs/: Archetype.hpp  CMakeLists.txt  EntityId.cpp  EntityId.h
lib/ecs/sparseSet/: CMakeLists.txt  SimpleSparseSet.hpp
lib/rendering/: CMakeLists.txt  Renderer.hpp
main/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/lib/: lib.cpp
test/: .clang-tidy  CMakeLists.txt  GameLoop_test.cpp  GameLoop_test.h  test.cpp
test/ecs/: Archetype_test.cpp  Archetype_test.h  CMakeLists.txt  EntityId_test.cpp  EntityId_test.h  ecs_test.cpp  ecs_test.h
test/ecs/sparseSet/: CMakeLists.txt  SimpleSparseSet_test.cpp  SimpleSparseSet_test.h  sparseSet_test.cpp  sparseSet_test.h
test/rendering/: CMakeLists.txt  Renderer_test.cpp  Renderer_test.h  rendering_test.cpp  rendering_test.h
